# gameboy-emulator

./: CMakeLists.txt  README.md  main.cpp
gb/: Legend of Zelda, The - Link's Awakening (USA, Europe) (Rev 1).sav  Pokemon Red (UE).sav
glad/include/glad/: glad.h
glad/src/: glad.c
outputs/: img.ppm  mario_doc.ppm
src/: RTC.cpp  RTC.h  app.cpp  app.h  bit_oper.cpp  bit_oper.h  cartridge.cpp  cartridge.h  cpu.cpp  cpu.h  debug_window.cpp  debug_window.h  emulator.cpp  emulator.h  file_helper.cpp  file_helper.h  imgui_pixel_renderer.cpp  imgui_pixel_renderer.h  instruction.cpp  instruction.h  joypad.cpp  joypad.h  log-min.cpp  log-min.h  log.cpp  log.h  log.hpp  ppu.cpp  ppu.h  serial.cpp  serial.h  timer.cpp  timer.h  type.h
